# IntegralSchemes

./: CMakeLists.txt
src/: information.hpp  main.cpp  parser.hpp  synthes.txt
tests/: CMakeLists.txt  test.cpp
